--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+/* CSS Code */
+input.form-control {
+  color: #f5f5f5a9; /* Metallic color */
+  font-family: "Debit Card", Arial, sans-serif; /* Debit Card font */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navigation {
+  background-color: #333;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navigation-list {
+  list-style-type: none;
+  margin: 0%;
+  padding: 0%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.navigation-item {
+  margin-right: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navigation-item a {
+  display: block;
+  padding:15px;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+}
+
+.navigation-item a:hover {
+  background-color: #fff;
+  color: #333;
 }
